testing to get the request with authorization header
